# js-exec-py

./: .gitignore  Cargo.toml  README.md  pyproject.toml
macros/: Cargo.toml
macros/src/: lib.rs
python/js_exec/: __init__.py  js_exec.pyi
src/: errors.rs  lib.rs  loader.rs  runtime.rs  traits.rs
src/types/: bigint.rs  callable.rs  context.rs  es_class.rs  function.rs  iterator_flags.rs  mod.rs  module.rs  object.rs  owned_key.rs  promise.rs  property_descriptor.rs  property_flags.rs  property_key.rs  sourcemap.rs  symbol.rs  value.rs
tests/: test_advanced.py  test_basic.py  test_error_handling.py  test_js_functions.py  test_js_objects.py  test_js_to_python.py
